worked on proptypes and setting states

--- a/index.html
+++ b/index.html
@@ -11,18 +11,8 @@
 </head>
 <body>
     <div id="area"></div>
-    <script type="text/babel">
-        let HelloWorld = React.createClass({
-            render : () => {
-                return (
-                    <h1>Hello World</h1>
-                )
-            }
-        });
-        ReactDOM.render(
-            <HelloWorld/>,
-            document.getElementById('area')
-        );
+    <script type="text/babel" src="index.js">
+
     </script>
 </body>
 </html>
